# Drone-Visual-Controler

./: .gitignore  README.md  running_simulations.md  startdrone.sh  startprey.sh  startsitl.sh
DVC/: CMakeLists.txt  package.xml
DVC/CMAKE + PACKAGE/BD/: CMakeLists.txt  package.xml
DVC/CMAKE + PACKAGE/DR/: package.xml
DVC/CMAKE + PACKAGE/MC/: CMakeLists.txt  package.xml
DVC/CMAKE + PACKAGE/OGL/: CMakeLists.txt  package.xml
DVC/CMAKE + PACKAGE/OGL_msgs/: CMakeLists.txt  package.xml
DVC/CMAKE + PACKAGE/OGL_msgs/msg/: ObjectGlobalPosition.msg  ObjectsGlobalPositions.msg
DVC/CMAKE + PACKAGE/TP/: CMakeLists.txt  package.xml
DVC/CMAKE + PACKAGE/TP_msgs/: CMakeLists.txt  package.xml
DVC/CMAKE + PACKAGE/TP_msgs/msg/: SimpleTree.msg
DVC/config/MC/: 3color.yaml  3color_sim.yaml  trees.yaml  trees_sim.yaml
DVC/config/OGL/: object_localizator.yaml  object_localizator_sim.yaml
DVC/config/TP/: 3color.yaml  trees.yaml
DVC/include/: common_data.hpp  config.h  gnc_functions.hpp  kalman.hpp  kalman_filter.h  main.hpp  predator_main_controller.hpp  read_yolo_data.h  read_yolo_data.hpp  read_yolo_data_functions.cpp
DVC/include/DR/: drone_ridder.h  drone_ridder_functions.cpp
DVC/include/MC/: mission_commander_3colors.h  mission_commander_3colors_functions.cpp  mission_commander_trees.h  mission_commander_trees_functions.cpp
DVC/include/OGL/: object_global_localizator.h  object_global_localizator_functions.cpp
DVC/include/TP/: TreeObejctPosition.cpp  TreeObejctPosition.h  trajectory_planer_functions.cpp  trajectory_planer_functions.h
DVC/launch/: Jetson.launch  debug_kalman.launch  dronevisualsim.launch  prey_path.launch  training_session.launch
DVC/msg/: TrajectoryPlaner.msg
DVC/scripts/MC/: image_saver_node.py  insert_data_to_db_colors.py  insert_data_to_db_trees.py  test.py
DVC/src/: filtration.cpp  kalman-test.cpp  kalman.cpp  kalman_filter.cpp  learning_session.cpp  pilot.cpp  predator_main_controller.cpp  prey_control.cpp  read_yolo_data.cpp
DVC/src/BD/: ball_droper.cpp  drop_ball.srv
DVC/src/DR/: circle.cpp  drone_ridder.cpp  randomly.cpp  sub2.cpp  subscriber.cpp  test_DR_square.cpp  test_set_global_position_square.cpp  test_set_global_position_still.cpp  test_set_heading.cpp  test_set_local_position.cpp  test_set_position_offset.cpp
DVC/src/MC/: mission_commander_3colors.cpp  mission_commander_trees.cpp
DVC/src/OGL/: object_global_localizator.cpp
DVC/src/TP/: trajectory_planer.cpp
DVC_SIM/: CMakeLists.txt  package.xml
DVC_SIM/launch/: apm.launch  runway3.launch
DVC_SIM/models/drone_with_camera_down/: model.sdf
DVC_SIM/models/drone_with_camera_down2/: model.config  model.sdf
DVC_SIM/models/moczniak_jabloni_drzewo/: model.config  model.sdf
DVC_SIM/models/parch_drzewo/: model.config  model.sdf
DVC_SIM/models/zdrowe_drzewo/: model.config  model.sdf
DVC_SIM/worlds/: runway3.world  runway3_drzewo_zycia.world  runway3_old.world
DVC_msgs/: CMakeLists.txt  package.xml
DVC_msgs/msg/: SearchResult.msg  SearchResults.msg  StatesVector.msg
DVC_msgs/srv/: treeTable.srv
Documantation/: dvc_on_jetson.md  how_to_run.md  prerequisites.md  running_simulations.md  teaching_yolov2.md  teaching_yolov3.md
Instructions/: prerequisites.md
