<?xml version="1.0"?>
<package format="2">
  <name>object_global_localizator</name>
  <version>0.0.0</version>
  <description>The object_global_localizator package</description>

 
  <maintainer email="maciek@todo.todo">maciek</maintainer>


  <license>TODO</license>


  


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mavros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>object_global_localizator_msgs</build_depend>
  <build_depend>darknet_ros_msgs</build_depend>
  <build_export_depend>mavros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>object_global_localizator_msgs</build_export_depend>
  <build_export_depend>darknet_ros_msgs</build_export_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>object_global_localizator_msgs</exec_depend>
  <exec_depend>darknet_ros_msgs</exec_depend>



  <export>
  

  </export>
</package>
